--- a/vid.html
+++ b/vid.html
@@ -14,7 +14,7 @@
 <body>
 
 <ul> <h1> Technwire News</h1>
-  <li><c onclick="location.href = 'Index.html'" >Home</a></li>
+  <li><c onclick="location.href = 'index.html'" >Home</a></li>
   <li><b onclick="location.href = 'Lookback.html';">Latest</b></li>
   <li><a>Contact</a></li>
   <li><a>About</a></li>
@@ -126,3 +126,4 @@ We’re listening, and we’re learning. Our goal is not to intrude, but to buil
 
   </div>
   </div>
+
