--- a/Controversy.html
+++ b/Controversy.html
@@ -13,7 +13,7 @@
 <body>
 
 <ul> <h1> Technwire News</h1>
-  <li><b onclick="location.href = 'index.html'" >Home</b></li>
+  <li><b onclick="location.href = 'index.html';" >Home</b></li>
   <li><c onclick="location.href = 'Lookback.html';" >Latest</c></li>
   <li><a>Contact</a></li>
   <li><a>About</a></li>
@@ -172,6 +172,7 @@ Accepted List of documents:
 
   </div>
   </div>
+
 
 
 
