--- a/Lookback.html
+++ b/Lookback.html
@@ -14,7 +14,7 @@
 <body>
 
 <ul> <h1> Technwire News</h1>
-  <li><c onclick="location.href = 'index.html'" >Home</a></li>
+  <li><c onclick="location.href = 'index.html';" >Home</a></li>
   <li><b onclick="location.href = 'Lookback.html';">Latest</b></li>
   <li><a>Contact</a></li>
   <li><a>About</a></li>
@@ -161,4 +161,5 @@ Privacy Experts Speak Out:<br>
 
   </div>
   </div>
+
 
